--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,7 @@ h2 .trait{
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
+    flex-wrap: wrap;
     width: 86%;
 }
 
@@ -300,8 +301,8 @@ h2 .trait{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 230px;
-    height: 180px;
+    width: 18%;
+    height: 195px;
     border-radius: 20px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
@@ -312,22 +313,23 @@ h2 .trait{
     align-items: center;
     width: 100%;
     height: 50%;
-    padding-top: 10px;
-    padding-bottom: 3px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     border: solid 1px;
     border-radius: 20px 20px 0 0;
     background-color: #DFDFDF;
 }
 .cardImage img{
-    width: 84px;
-    height: 84px;
+    width: 100px;
+    height: 100px;
 }
 .cardText{
     text-align: center;
     height: 50%;
 }
 .cardText p{
-    font-size: 13px;
+    font-size: 15px;
     padding-left: 7px;
     padding-right: 7px;
+    font-weight: 500;
 }
