--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header nav ul li{
     background-color: #000000;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) ,url("../images/banniere.jpg");
     width: 100%;
-    height: 490px;
+    height: 495px;
     background-size: cover;
 }
 
@@ -172,7 +172,7 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 400px;
+    margin-top: 100px;
 }
 .containerFooter{
     display: flex;
@@ -206,17 +206,27 @@ footer{
 }
 .contactFooter ul{
     list-style-type: none;
-    margin-left: 0;
+    margin-left: 2px;
     padding-left: 0;
+    display: flex;
+    gap: 20px;
+    position: relative;
    
+}
+.link{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 }
 .logoContact{
     width: 19px;
     height: 19px;
 }
 .sizelogo{
-    width: 17px;
-    height: 17px;
+    width: 20px;
+    height: 20px;
 }
 .contactFooter ul li{
     border-radius: 50%;
@@ -224,17 +234,14 @@ footer{
     justify-content: center;
     align-items: center;
     border: solid 1px;
-    width: 25px;
-    height: 25px;
+    width: 35px;
+    height: 35px;
     margin-top: 10px;
     position: relative;
 }
-.contactFooter ul li p{
-    position: absolute;
-    left: 30px;
-    width: 200px;
-    font-size: 13px;
-    font-weight: 500;
+
+.contactFooter ul li:hover{
+    background-color: #06D1F0;
 }
 
 .copyrgth{
@@ -332,4 +339,128 @@ h2 .trait{
     padding-left: 7px;
     padding-right: 7px;
     font-weight: 500;
+}
+
+#outils{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.outilsContainer{
+    width: 86%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 101px;
+}
+
+.cardOutils{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 20%;
+    margin-top: 20px;
+}
+
+.cardOutils img{
+    width: 80px;
+    height: 80px;
+
+}
+.cardOutils p{
+    margin-left: 10px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+
+.interetContainer{
+    width: 86%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.loisirFont{
+    background-color: #000000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) ,url("../images/loisir.jpg");
+    width: 350px;
+    height: 400px;
+    background-size: cover;
+    border: solid 2px;
+    border-radius: 20px;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+.textLoisir{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin-top: 20px;
+}
+
+.textLoisir p{
+    font-size: 30px;
+    text-shadow: #070470 1px 0 10px;
+    color: white;
+    text-align: left;
+    width: 85%;
+    font-weight: 700;
+}
+
+.textLoisir ul{
+    font-size: 20px;
+    font-weight: 500;
+    text-shadow: #070470 1px 0 10px;
+    color: white;
+    list-style-type: none;
+    width: 85%;
+    padding-left: 0;
+}
+.textLoisir ul li{
+    margin-bottom: 10px;
+
+}
+
+.techFont{
+    background-color: #000000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) ,url("../images/technologie.jpg");
+    width: 350px;
+    height: 400px;
+    background-size: cover;
+    border: solid 2px;
+    border-radius: 20px;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+.cultureFont{
+    background-color: #000000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) ,url("../images/culture.jpg");
+    width: 350px;
+    height: 400px;
+    background-size: cover;
+    border: solid 2px;
+    border-radius: 20px;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+#interet{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.langageFont{
+    background-color: #000000;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)) ,url("../images/langage.jpg");
+    width: 350px;
+    height: 400px;
+    background-size: cover;
+    border: solid 2px;
+    border-radius: 20px;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
