--- a/css/veilleStyle.css
+++ b/css/veilleStyle.css
@@ -1,8 +1,7 @@
 .banniereVeille{
-    
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) ,url("../images/bnrVeille.jpg");
     width: 100%;
-    height: 490px;
+    height: 495px;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -34,46 +33,53 @@
 
 .cardsVeille{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    gap: 60px;  
     margin-top: 30px;
+    width: 86%;
 }
 .cardContainer{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 86%;
-    height: 150px;
-    border: solid 1px;
-    border-radius: 5px;
+    flex-direction: column;
+    width: 25%;
+    height: 370px;
+    border: solid 2px;
+    border-radius: 20px;
+    margin-bottom: 80px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     position: relative;
 }
 
 .imageCard{
-    width: 25%;
-    height: 150px;
-    border-radius: 5px;
+    width: 100%;
+    height: 50%;
 }
 .imageCard img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
+    border-radius: 20px 20px 0 0;
+}
+#cardsSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .descriptionCard{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 75%;
-    padding-left: 10px;
+    align-items: center;
+    height: 50%;
     padding-right: 10px;
+    padding-left: 10px;
+   
 }
 .titleCard{
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 500;
 }
 .article{
