--- a/css/apropos.css
+++ b/css/apropos.css
@@ -163,3 +163,19 @@
     align-items: center;
     margin-top: 0;
 }
+
+
+.hosni{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button{
+    width: 200px;
+    height: 40px;
+    border: solid 1px;
+    border-radius: 15px;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgb(88, 24, 141) 0%, rgb(163, 12, 163) 35%, rgb(88, 6, 240) 100%);
+    box-shadow: rgba(186, 47, 204, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
