--- a/css/apropos.css
+++ b/css/apropos.css
@@ -1,5 +1,5 @@
 .banniereApropos{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) ,url("../images/bnrApropos.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)) ,url("../images/bnrApropos.jpg");
     width: 100%;
     height: 495px;
     background-size: cover;
@@ -165,17 +165,30 @@
 }
 
 
-.hosni{
+.btnSynthese{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 30px;
+    
 }
 button{
+    cursor: pointer;
     width: 200px;
-    height: 40px;
+    height: 50px;
     border: solid 1px;
-    border-radius: 15px;
+    border-radius: 20px;
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgb(88, 24, 141) 0%, rgb(163, 12, 163) 35%, rgb(88, 6, 240) 100%);
-    box-shadow: rgba(186, 47, 204, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(44,44,97,1) 61%, rgba(0,212,255,1) 100%);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    
+}
+
+.site{
+    text-decoration: none;
+    color: black;
+}
+
+.gif{
+    width: 45px;
+    height: 45px;
+    transform: rotate(-120deg);
 }
