--- a/css/style.css
+++ b/css/style.css
@@ -143,16 +143,23 @@ button a{
 button:hover{
     filter: drop-shadow(0 0 0.75rem #0B8CB8)
 }
-
 .aboutContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+}
+.aboutContainer .centerElem{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
+    width: 95%;
 }
 
-.aboutContainer h1{
+.aboutContainer .centerElem h1{
     font-size: 30px;
     font-weight: 900;
 }
@@ -161,7 +168,7 @@ button:hover{
     color: #070470;
 }
 
-.aboutContainer p{
+.aboutContainer .centerElem p{
     margin-top: 0;
     text-align: center;
 }
@@ -300,6 +307,7 @@ h2 .trait{
     margin-top: 20px;
     flex-wrap: wrap;
     width: 86%;
+    gap: 20px;
 }
 
 .card{
@@ -308,7 +316,7 @@ h2 .trait{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 18%;
+    width: 250px;
     height: 195px;
     border-radius: 20px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -355,14 +363,14 @@ h2 .trait{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 101px;
+    gap: 20px;
 }
 
 .cardOutils{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 20%;
+    width: 250px;
     margin-top: 20px;
 }
 
@@ -381,7 +389,10 @@ h2 .trait{
 .interetContainer{
     width: 86%;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
     margin-top: 20px;
 }
 
@@ -463,4 +474,101 @@ h2 .trait{
     border: solid 2px;
     border-radius: 20px;
     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
+@media screen and (max-width: 800px){
+    header{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 150px;
+    }
+    .headerLogo{
+        width: 95%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    header nav{
+        width: 95%;
+    }
+    header nav ul{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .banniere{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .presentation{
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+    }
+    .centerElem{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
+    .cards{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .interetContainer{
+        width: 86%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
+
+@media screen and (max-width: 500px) {
+    .headerLogo img{
+        width: 40px;
+        height: 40px;
+    }
+    .headerLogo p{
+        font-family: 'Black Ops One', cursive;
+        font-size: 30px;
+        color: #06D1F0;
+        margin-left: 2px;
+    }
+    header nav ul li a{
+        position: relative;
+        text-decoration: none;
+        font-size: 11px;
+        font-weight: 500;
+        color: white;
+        letter-spacing: 0.5px;
+        padding: 0;
+    }
+    #phrasePresentation{
+        font-size: 25px;
+    }
+    .textPresentation{
+        font-size: 13.5px;
+    }
+    .loisirFont , .techFont, .cultureFont, .langageFont{
+        width: 300px;
+        height: 400px;
+        
+    }
+    .logoFooter img{
+        width: 25px;
+        height: 25px;
+    }
+    .logoFooter p{
+        font-size: 18px;
+    }
 }
