--- a/css/apropos.css
+++ b/css/apropos.css
@@ -210,6 +210,7 @@ button{
     .button a{
         font-size: 13px;
     }
+   
     
 
 }
@@ -229,8 +230,22 @@ button{
     .button a{
         font-size: 12px;
     }
-    
+    .descriptionSio h2{
+        font-size: 40px;
+    }
+    .descriptionSioBIS h2{
+        font-size: 40px;
+    }
+    .descriptionSio p{
+        font-size: 13px;
+     
+    }
+    .descriptionSioBIS p{
+        font-size: 13px;
+    }
+   
 
+  
 }
 
 @media screen and (max-width: 1150px){
