--- a/css/projet.css
+++ b/css/projet.css
@@ -118,25 +118,28 @@ h2 .trait{
     border: solid 1px;
     justify-content: center;
     align-items: center;
-    width: 75%;
-    height: 250px;
+    width: 86%;
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .imgPrjct{
     width: 25%;
-    height: 90%;
+    height: 100%;
     object-fit: cover;
-    margin-left: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .imgPrjct img{
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
 }
 .txtProject{
     width: 75%;
     padding-left: 20px;
     height: 100%;
+    padding-bottom: 15px;
 }
 .titlePrjt{
     font-size: 25px;
@@ -169,4 +172,83 @@ h2 .trait{
 .up{
     width: 45px;
     height: 45px;
+}
+
+@media screen and (max-width: 500px){
+    .title p{
+        font-size: 45px;
+       
+    }
+    .textPresentation{
+        font-size: 16px;
+    }
+    
+}
+@media screen and (max-width: 900px){
+    .titlePrjt{
+        font-size: 20px;
+    }
+    .textePrjct{
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 620px){
+    .cardSom p{
+        font-size: 13px;
+    }
+    .titlePrjt{
+        font-size: 18px;
+    }
+    .textePrjct{
+        font-size: 11px;
+    }
+}
+@media screen and (max-width: 540px){
+    .cardSom p{
+        font-size: 11px;
+    }
+    
+}
+@media screen and (max-width: 375px){
+    .cardSom p{
+        font-size: 9px;
+    }
+    .cardProjets{
+        display: flex;
+        flex-direction: column;
+        width: 95%;
+    }
+    .imgPrjct{
+        width: 100%;
+        height: 100%;
+    }
+    .imgPrjct img{
+        width: 100%;
+        height: 90%;
+    }
+    .txtProject{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1383px) {
+    .containerSom{
+        justify-content: center;
+    }
+    .ancre{
+        position: fixed;
+        right: 0;
+        top: 50%;
+        width: 8em;
+        margin-top: -2.5em;
+        margin-right: -5em;
+    }
+    
+}
+@media screen and (max-width: 723px) {
+    .ancre{
+        display: none;
+    }
+    
 }
